CME-25 upgrade to Spring Boot 3 (#593)